# libsocket

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-mingw-build.yml
cmake/: configure.cmake  libsocketConfig.cmake.in  tests.cmake
cmake/targets/: autoinit.cmake  socket.cmake  tests.cmake
include/: libsocket.h
include/util/: autoinit.h
src/: addrinfo.c  err.c  err.h  getopt.c  globvars.c  init.c  init.h  ipaddr.c  libsocket.c  main.c  optfunc.h  optfuncbase.h  opts.c  setopt.c  sockaddr.c  sockerrorcodes.h  socket.h  sockslist.c  sockslist.h  strerr.c  types.h  util.c  util.h
src/api/: err.c  err.h  main.c  strerr.c
src/autoinit/: autoinit.c
src/socket/: err.c  err.h  init.c  init.h  ipaddr.c  main.c  sockaddr.c  strerr.c  util.h
tests/: 0.c  1.c  2.c  README.md  util.c  util.h
tests/base/: base.c  base.h
